--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <a href="https://www.cs.cmu.edu/~rsalakhu/">Ruslan Salakhutdinov</a>, &emsp; <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>, &emsp; 
   <a href="https://people.eecs.berkeley.edu/~jegonzal/">Joseph E. Gonzalez</a>
   </center></p>
-<p><center><b><a href="v">Paper</a>, &emsp; <a href="https://github.com/ben-eysenbach/c-planning/">Code</a></b></center></p>
+<p><center><b><a href="https://arxiv.org/abs/2110.12080">Paper</a>, &emsp; <a href="https://github.com/ben-eysenbach/c-planning/">Code</a></b></center></p>
 
 ![**C-Planning** is an algorithm for goal-conditioned RL that uses an automatic curriculum of waypoints to learn policies that can solve complex tasks, such as manipulating multiple objects in sequence to achieve a goal, without requiring any reward functions, manual distance functions, or human demonstrations.](snapshots.png)
 
